--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>OptiFine</title>
+    <title>Kasho Truck and Autobody & Steel Fabricators</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <link rel="shortcut icon" href='images/of16r.png' />
-    <meta name="description" content="OptiFine - Minecraft performance tuning and advanced graphics" />
-    <meta name="keywords" content="optifine, minecraft, fps, lag, antialiasing, hd textures" />
+    <meta name="description" content="Kasho Truck and Autobody & Steel Fabricators: Your complete welding company" />
+    <meta name="keywords" content="welders long island, powdercoating near me, welder near me, welders near center moriches, welder in riverhead, dejana, ford rocker repair, chevy rockers, cab corners" />
 <style type="text/css">
       @font-face {
         font-family: 'Roboto';
