--- a/index.html
+++ b/index.html
@@ -310,16 +310,13 @@
         <td class="header">
           <!-- Title -->
           <span class="headerTitle">
-            <a href="home">OptiFine</a>
+            <a href="home">Kasho Truck and Autobody & Steel Fabricators</a>
           </span>
           <!-- Navigation -->
           <span class="headerNav">
             <a href="home">Home</a>
-            <a href="downloads">Downloads</a>
-            <a href="donate">Donate</a>
-            <a href="cape">Cape</a>
-            <a href="banners">Banners</a>
-            <a href="login">Login</a>
+            <a href="downloads">Our Work</a>
+            <a href="donate">Contact</a>
             <a href="faq">FAQ</a>
           </span>
         </td>
