--- a/index.html
+++ b/index.html
@@ -333,9 +333,8 @@
         <td class="footer">
           <!-- Footer -->
           <span class="footerIcon">
-            <a href="https://discord.gg/3mMpcwW" target="_blank"><img alt="Discord" src="images/discord.png"></a>
-            <a href="https://twitter.com/OptiFineNews" target="_blank"><img alt="Twitter" src="images/twitter.png"></a>
-            <a href="https://reddit.com/r/optifine" target="_blank"><img alt="Reddit" src="images/reddit.png"></a>
+            <a href="discord link here" target="_blank"><img alt="Discord" src="images/discord.png"></a>
+            <a href="instagram link here" target="_blank"><img alt="Instagram" src="images/reddit.png"></a>
           </span>
           <span class="footerText">
             <a href="privacy">Privacy</a>
