--- a/index.html
+++ b/index.html
@@ -324,7 +324,9 @@
       <tr>
         <td class="content">
           <!-- Content -->
-<p>Coming Soon</p>
+<p>mail: angel@kashotruckandbody.co</p>
+          <p>phone: 6317707807</p>
+          <p>instagram: 4ngel.b_</p>
 
     <!-- End of content -->
         </td>
