--- a/index.html
+++ b/index.html
@@ -324,9 +324,13 @@
       <tr>
         <td class="content">
           <!-- Content -->
+          <p>full website in developement</p>
+          <p> </p>
 <p>mail: angel@kashotruckandbody.co</p>
           <p>phone: 6317707807</p>
           <p>instagram: 4ngel.b_</p>
+                    <p></p>
+                    <p>pictures of work on my instagram for now</p>
 
     <!-- End of content -->
         </td>
