--- a/index.html
+++ b/index.html
@@ -326,9 +326,9 @@
           <!-- Content -->
           <p>full website in developement</p>
           <p> </p>
-<p>mail: angel@kashotruckandbody.co</p>
-          <p>phone: 6317707807</p>
-          <p>instagram: 4ngel.b_</p>
+<p href="mailto:angel@kashotruckandbody.co">mail: angel@kashotruckandbody.co</p>
+          <p href="tel:6317707807">phone: 6317707807</p>
+          <p href="https://www.instagram.com/4ngel.b_/">instagram: 4ngel.b_</p>
                     <p></p>
                     <p>pictures of work on my instagram for now</p>
 
