--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
           <!-- Navigation -->
           <span class="headerNav">
             <a href="home">Home</a>
-            <a href="downloads">Our Work</a>
-            <a href="donate">Contact</a>
+            <a href="pictures">Our Work</a>
+            <a href="contact">Contact</a>
             <a href="faq">FAQ</a>
           </span>
         </td>
@@ -331,7 +331,7 @@
 <ul>
     <li><a href="mailto:angel@kashotruckandbody.co">Email</a></li>
     <li><a href="tel:6317707807">Phone</a></li>
-    <li><a href="https://www.instagram.com/4ngel.b_/">Instagram</a></li>
+    <li><a href="https://www.instagram.com/kashotruck/">Instagram</a></li>
 </ul>
 
                     <p></p>
